# ml-edsl

./: .gitignore  ARCHITECTURE.md  BUILD.md  CLAUDE.md  CMakeLists.txt  ROADMAP.md  build.sh  compile_commands.json  debug_gpu.sh  debug_multifunction.py  migrate_type_order.py  pipeline.md  requirements-cpp.txt  requirements.txt  setup.py  test_recursive_decorator.py  test_simple_recursion.py
.claude/agents/: mlir-ir-inspector.md
benchmarks/: bench_dense_layer.py  bench_matmul.py
cmake/: CompilerFlags.cmake  Development.cmake  FindFlatBuffers.cmake  FindMLIR.cmake  FlatBuffersSchemas.cmake  MLIRDialects.cmake  ProtobufSchemas.cmake  Pybind11Protobuf.cmake
cpp/: CMakeLists.txt
cpp/include/mlir_edsl/: ArithBuilder.h  LinalgBuilder.h  MLIRBuilder.h  MLIRCompiler.h  MLIRExecutor.h  MLIRLowering.h  MLIRLoweringPasses.h  MemRefBuilder.h  SCFBuilder.h  TensorBuilder.h  proto_fwd.h
cpp/schemas/: ast.proto
cpp/src/: MLIRBuilder.cpp  MLIRCompiler.cpp  MLIRExecutor.cpp  MLIRLowering.cpp  MLIRLoweringPasses.cpp  python_bindings.cpp
cpp/src/builders/: ArithBuilder.cpp  LinalgBuilder.cpp  MemRefBuilder.cpp  SCFBuilder.cpp  TensorBuilder.cpp
examples/: README.md  jit_optimization_demo.py  simple_jit_examples.py
experiments/: async_pipeline.sh  cpu_pipeline.sh  fuse_matmul_bias_relu.sh  gpu_pipeline.sh  gpu_shared_memory.md  matmul_bias_relu.mlir  matmul_bias_relu_cpu.mlir  matmul_bias_relu_gpu.mlir  nvvm_test.sh  outparam_test.mlir  tile_fuse_cpu_strategy.mlir  tile_fuse_gpu_2level.mlir  tile_fuse_gpu_pipeline.sh  tile_fuse_gpu_strategy.mlir
experiments/epiloguefusion/: compile_gpu.sh  dense_gpu.mlir
mlir_edsl/: __init__.py  ast.py  ast_pb2.py  backend.py  functions.py  loop_ops.py  ops.py  type_system.py  types.py
mlir_edsl/ast/: __init__.py  base.py  dump.py  helpers.py  operators.py  serialization.py
mlir_edsl/ast/nodes/: __init__.py  arrays.py  control_flow.py  functions.py  linalg.py  scalars.py  tensors.py
mlir_edsl/functions/: __init__.py  compilation.py  context.py  decorator.py  signature.py  validation.py
mlir_edsl/ops/: __init__.py  arithmetic.py  comparison.py  control_flow.py  conversion.py  linalg.py
tests/: CLAUDE.md  conftest.py  test_array_ast.py  test_base.py  test_conditionals.py  test_control_flow.py  test_cpp_backend.py  test_jit_integration.py  test_loops.py  test_optimization_benchmark.py  test_parameter.py  test_parameters.py  test_recursion.py  test_strict_typing.py
tests/core/: test_cache_key_collision.py  test_cpp_backend.py  test_for_loop.py  test_ir.py  test_ir_inspection.py  test_jit_integration.py  test_multicore.py  test_optimization_benchmark.py  test_recursion.py  test_strict_typing.py
tests/gpu/: test_gpu_benchmark.py  test_gpu_execution.py
tests/linalg/: test_binary_op_ast.py  test_binary_op_execution.py  test_dot_execution.py  test_ir.py  test_linalg_dyn.py  test_lowering_ir.py  test_map_execution.py  test_matmul_execution.py  test_matmul_large.py  test_numpy_interop.py  test_reduce_execution.py
tests/memref/: test_array_2d.py  test_array_3d.py  test_array_ast.py  test_array_dyn_return.py  test_array_elementwise.py  test_array_execution.py  test_array_mlir.py  test_array_params.py  test_array_return.py  test_array_types.py  test_ir.py
tests/tensor/: test_ir.py  test_tensor_ast.py  test_tensor_dyn_params.py  test_tensor_dyn_return.py  test_tensor_empty.py  test_tensor_execution.py  test_tensor_insert.py  test_tensor_params.py  test_tensor_return.py  test_tensor_types.py
